--- a/_drafts/2016-03-04-multi-server-queues.Rmd
+++ b/_drafts/2016-03-04-multi-server-queues.Rmd
@@ -192,6 +192,13 @@ ggplot(.df) +
     ylab("Average Latency")
 ```
 
+As you might expect, the queue with the lowest service rate has a higher
+baseline latency. However, because there are more servers in that queue,
+the latency as $$\rho$$ increases remains steady. Recall the stability
+condition $$a = \lambda / (c \mu) < 1 $$, and it should be apparent that
+more servers will result in longer periods latency stability when
+$$\lambda > \mu$$.
+
 To see more configurations in action, I've created a [small simulator][4]
 that you can use to compare two different queue models.
 
